--- a/laravelEsdeveniments/composer.json
+++ b/laravelEsdeveniments/composer.json
@@ -12,7 +12,9 @@
         "php": "^8.2",
         "intervention/image": "*",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "tarfin-labs/zbar-php": "^1.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
