--- a/laravelEsdeveniments/composer.json
+++ b/laravelEsdeveniments/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "laraveldaily/laravel-invoices": "4.0",
-        "simplesoftwareio/simple-qrcode": "~4",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "tarfin-labs/zbar-php": "^1.7"
     },
     "require-dev": {
