--- a/laravelEsdeveniments/composer.json
+++ b/laravelEsdeveniments/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^2.2",
         "intervention/image": "*",
+        "laravel/cashier": "^15.6",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "laraveldaily/laravel-invoices": "4.0",
